# prevalidate

./: .gitignore  LICENSE  README.md  pyproject.toml
prevalidate/: __main__.py  main.py
prevalidate/sentinel/: __init__.py  detections.py  main.py  plugins.py  workspace.py
prevalidate/sentinel/models/: dcr.py  detection.py
prevalidate/sentinel/templates/: detection.md
prevalidate/sentinel/test_stages/: test_sentinel.py
prevalidate/test_stages/: test_sentinel.py
tests/: test_sentinel.py
tests/test_data/kql/: example_login_invalid_operator.kql  example_login_invalid_table.kql  example_login_valid.kql
tests/test_data/sentinel/: dcr.json  schema.json
